Fixed alignments

--- a/summary.css
+++ b/summary.css
@@ -56,7 +56,7 @@ body{
     padding: 10px;
 }
 .collaborators img{
-    margin 10px;
+    padding:10px 10px;
     width:400px;
     height:400px;
 }
@@ -64,15 +64,19 @@ body{
 .collaborators{
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .collaborators div {
     width:33%;
     border: 2px double tomato;
     margin: 10px;
+    padding:10px;
 }
 
 .list_collaborators h2 {
+    text-align: center;
+}
+
+footer{
     text-align: center;
 }
